added spring boot, wiremock, containers. refactored main file and facade test